# DAVI_ai

./: README.md  main.py  pyproject.toml  run_hayhooks.sh  setup_env_sample.sh
davi/: document_deletion.py  document_store.py  indexing.py  llm.py  prompts.py  prompts_web_search.py  rag.py  web_search.py
davi/components/: docling_converter.py  markdown_splitter.py  parallel_executor.py  retrieval_postprocessor.py  retrieval_query_expander.py  serper_dev.py  token_handler.py
hayhooks_wrapper/davi_indexing/: pipeline_wrapper.py
hayhooks_wrapper/davi_indexing_remove/: pipeline_wrapper.py
hayhooks_wrapper/davi_query/: pipeline_wrapper.py
hayhooks_wrapper/davi_web_search/: pipeline_wrapper.py
notebooks/: eval_analysis.py
